@@ -146,20 +146,6 @@ name|concurrent
 operator|.
 name|atomic
 operator|.
-name|AtomicBoolean
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|concurrent
-operator|.
-name|atomic
-operator|.
 name|AtomicInteger
 import|;
 end_import
@@ -696,26 +682,6 @@ argument_list|<
 name|TaskId
 argument_list|,
 name|Boolean
-argument_list|>
-argument_list|()
-decl_stmt|;
-DECL|field|pendingSpeculations
-specifier|private
-specifier|final
-name|Map
-argument_list|<
-name|Task
-argument_list|,
-name|AtomicBoolean
-argument_list|>
-name|pendingSpeculations
-init|=
-operator|new
-name|ConcurrentHashMap
-argument_list|<
-name|Task
-argument_list|,
-name|AtomicBoolean
 argument_list|>
 argument_list|()
 decl_stmt|;
@@ -1786,35 +1752,6 @@ argument_list|,
 name|timestamp
 argument_list|)
 expr_stmt|;
-comment|// If the task is already known to be speculation-bait, don't do anything
-if|if
-condition|(
-name|pendingSpeculations
-operator|.
-name|get
-argument_list|(
-name|task
-argument_list|)
-operator|!=
-literal|null
-condition|)
-block|{
-if|if
-condition|(
-name|pendingSpeculations
-operator|.
-name|get
-argument_list|(
-name|task
-argument_list|)
-operator|.
-name|get
-argument_list|()
-condition|)
-block|{
-return|return;
-block|}
-block|}
 if|if
 condition|(
 name|stateString
